[gd_scene load_steps=5 format=3 uid="uid://bk5l7umgip4v5"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_tvob0"]
[ext_resource type="Theme" uid="uid://dr1p05vgqcplh" path="res://scenes/custom_bouton_theme.tres" id="2_ajflq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_khfg4"]
bg_color = Color(0.842687, 0, 0.00884624, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5lqn7"]
bg_color = Color(1, 0.168627, 0.184314, 1)

[node name="Main" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0100098, 0.0284071, -0.0135775)
script = ExtResource("1_tvob0")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.901961, 0.901961, 0.901961, 1)

[node name="Label" type="Label" parent="."]
offset_left = 448.0
offset_top = 128.0
offset_right = 1408.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Test Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Parcours_SL_Button" type="Button" parent="."]
offset_left = 736.0
offset_top = 232.0
offset_right = 1120.0
offset_bottom = 328.0
size_flags_horizontal = 4
theme = ExtResource("2_ajflq")
theme_override_font_sizes/font_size = 25
text = "Parcours test arret"

[node name="Parcours_Reel_Button" type="Button" parent="."]
offset_left = 736.0
offset_top = 360.0
offset_right = 1120.0
offset_bottom = 456.0
size_flags_horizontal = 0
theme = ExtResource("2_ajflq")
theme_override_font_sizes/font_size = 25
text = "Parcours Reel"

[node name="Parcours_US_Button" type="Button" parent="."]
offset_left = 736.0
offset_top = 488.0
offset_right = 1120.0
offset_bottom = 582.0
theme = ExtResource("2_ajflq")
theme_override_font_sizes/font_size = 25
text = "Parcours Ultrason"

[node name="Parcours_Conduite_Epreuve" type="Button" parent="."]
offset_left = 736.0
offset_top = 616.0
offset_right = 1120.0
offset_bottom = 712.0
theme = ExtResource("2_ajflq")
theme_override_font_sizes/font_size = 25
text = "Parcours Conduite Ã‰preuve"

[node name="Quit_Button" type="Button" parent="."]
offset_left = 824.0
offset_top = 760.0
offset_right = 1036.0
offset_bottom = 841.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_khfg4")
theme_override_styles/hover = SubResource("StyleBoxFlat_5lqn7")
text = "Quit"

[connection signal="pressed" from="Parcours_SL_Button" to="." method="_on_parcours_sl_button_pressed"]
[connection signal="pressed" from="Parcours_Reel_Button" to="." method="_on_parcours_reel_button_pressed"]
[connection signal="pressed" from="Parcours_US_Button" to="." method="_on_parcours_us_button_pressed"]
[connection signal="pressed" from="Parcours_Conduite_Epreuve" to="." method="_on_parcours_conduite_epreuve_pressed"]
[connection signal="pressed" from="Quit_Button" to="." method="_on_quit_button_pressed"]
